update/funcion de nueva operacion y se pinta en panel oculto

--- a/style.css
+++ b/style.css
@@ -64,3 +64,19 @@
 .oculto{
     display: none;
 }
+
+.ganancia{
+    color: green;
+}
+
+.ganancia::before {
+    content: '+';
+
+}
+.gasto{
+    color:red;
+}
+
+.gasto::before {
+    content: '-';
+}
