--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@
 .my-nav-link {
     font-size: 1em;
     border-radius: 5px;
+
 }
 
 .nav-title:hover,
@@ -79,4 +80,15 @@
 
 .gasto::before {
     content: '-';
+}
+
+/* ********************
+        RESPONSIVE
+************************/
+
+@media (min-width:820px) and (max-width: 1500px){
+    .nav-flex{
+        display: flex;
+        justify-content: flex-end;
+    }
 }
