--- a/style.css
+++ b/style.css
@@ -81,7 +81,9 @@
 .gasto::before {
     content: '-';
 }
-
+.gasto-balance{
+    color:red;
+}
 /* ********************
         RESPONSIVE
 ************************/
