--- a/style.css
+++ b/style.css
@@ -3,10 +3,12 @@
     --color-focus: rgb(115, 198, 182);
     --color-titulo-cat: rgb(127, 179, 213);
 }
-body{
-    background-color: rgb(214, 234, 248); 
-    background-image: linear-gradient(-90deg, rgb(214, 234, 248), rgb(171, 235, 198 ), rgb(252, 243, 207));
+
+body {
+    background-color: rgb(214, 234, 248);
+    background-image: linear-gradient(-90deg, rgb(214, 234, 248), rgb(171, 235, 198), rgb(252, 243, 207));
 }
+
 * {
     margin: 0px;
     padding: 0px;
@@ -26,7 +28,6 @@ body{
 .my-nav-link {
     font-size: 1em;
     border-radius: 5px;
-
 }
 
 .nav-title:hover,
@@ -97,8 +98,34 @@ body{
     }
 }
 
-@media (min-width:100px) and (max-width: 819px) {
+@media (min-width:420px) and (max-width: 819px) {
+    .container-operaciones-titulo {
+        font-size: 0.9em;
+    }
 
-   
+    .container-operaciones-btn {
+        font-size: 0.7em;
+    }
+}
 
+
+@media (min-width:100px) and (max-width: 419px) {
+
+    .responsive-titulo {
+        font-size: 0.9em;
+
+    }
+
+    .responsive-btn {
+        font-size: 0.7em;
+
+    }
+
+    .tabla-responsive {
+        font-size: 0.6em;
+    }
+
+    .tabla-responsive-reportes {
+        font-size: 0.9em;
+    }
 }
