--- a/style.css
+++ b/style.css
@@ -1,12 +1,23 @@
 :root {
     --color-primario: rgb(127, 179, 213);
+    --color-body: rgb(214, 234, 248);
+    --color-image: linear-gradient(-90deg, rgb(214, 234, 248), rgb(171, 235, 198), rgb(252, 243, 207));
     --color-focus: rgb(115, 198, 182);
     --color-titulo-cat: rgb(127, 179, 213);
 }
 
+.dark {
+    --color-primario: rgb(67, 72, 88);
+    --color-focus: rgb(74, 70, 100);
+    --color-titulo-cat: rgb(171, 163, 173);
+    --color-body: rgb(7, 10, 47);
+    --color-image: linear-gradient(-90deg, rgb(0, 0, 0), rgb(22, 25, 42), rgb(2, 8, 50));
+    --color-text: white;
+}
+
 body {
-    background-color: rgb(214, 234, 248);
-    background-image: linear-gradient(-90deg, rgb(214, 234, 248), rgb(171, 235, 198), rgb(252, 243, 207));
+    background-color: var(--color-body);
+    background-image: var(--color-image);
 }
 
 * {
@@ -23,11 +34,13 @@ body {
     padding: 0.2em;
     font-size: 1.7em;
     border-radius: 5px;
+
 }
 
 .my-nav-link {
     font-size: 1em;
     border-radius: 5px;
+
 }
 
 .nav-title:hover,
@@ -35,6 +48,10 @@ body {
 .my-nav-link:hover,
 .my-nav-lin:focus {
     background-color: var(--color-focus);
+}
+
+.dark-input:checked {
+    background-color: rgb(0, 0, 0);
 }
 
 /* **************
